--- a/index.html
+++ b/index.html
@@ -4,10 +4,118 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coco</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <title>CoCo Always Fresh</title>
+
+    <meta property="og:title" content="Coco Always Fresh" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://cocoalwaysfresh.com/images/logo.png" />
+    <meta property="og:url" content="https://cocoalwaysfresh.com" />
+    <meta property="og:description" content="Variety of fresh snacks and beverages, including bubble tea, korean corndogs, wraps and more!" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3D7JHKQQS4"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-3D7JHKQQS4');
+    </script>
+
 </head>
-    <h1>Test</h1>
-<body>
+
+<div class="wrapper">
     
+    <header>
+        <div class="toolbar">
+            <p>*Following Covid-19 Protocols</p>
+            <div class="social-media">
+                <a href="https://www.facebook.com/cocosummermall"><img src="images/facebook.png" alt="Facebook Icon"></a>
+                <a href="https://www.instagram.com/coco.kuching"><img src="images/instagram.png" alt="Instragram Icon"></a>
+            </div>
+        </div>
+        <a href="index.html"><img class="logo" src="images/logo.png" alt="Coco Logo"></a>
+    </header>
+
+
+
+    <div class="hero-banner">
+
+        <div class="hero-text">
+            <h2>CoCo<span class="line-break"></span> Always Fresh</h2>
+        </div>
+
+    </div>
+
+    <main>
+
+    <div class="spacing">
+    <h3 class="heading">Store Locations</h3>
+
+        <div class="stores">
+            <div class="summer-mall card">
+                <img src="images/summer-mall.png" alt="Photo of Coco at Summer Mall">
+                <p class="store-name">Coco @ Summer Mall</p>
+                <p>Location: Jln Datuk Mohammad Musa, 94300 Kota Samarahan</p>
+                <p>Hours: Monday - Sunday (9:30AM - 9:30PM)</p>
+            </div>
+
+            <div class="matang card">
+                <img src="images/matang.png" alt="Photo of Coco at Emart Matang">
+                <p class="store-name">Coco @ Emart Matang</p>
+                <p>Location: Lot 9808, Lee Ling Commercial Centre, 4th Mile, Jalan Matang</p>
+                <p>Hours: Monday - Sunday (9:30AM - 9PM)</p>
+
+            </div>
+
+            <div class="batu-kawa card">
+                <img src="images/batu-kawa.png" alt="Photo of Coco at Emart Batu Kawa">
+                <p class="store-name">Coco @ Emart Batu Kawa</p>
+                <p>Location: Emart One Stop Shopping Mall, Lot 6369, 4th Mile, Batu Kawa</p>
+                <p>Hours: Monday - Sunday (10AM - 9PM)</p>
+            </div>
+
+        </div>
+
+    </div>
+
+    </main>
+
+
+    <footer>
+        <div class="footer-spacing">
+        <div class="footer-info">
+            <div class="copyright-desktop">
+                <p>© 2021 Coco Always Fresh. All rights reserved.</p>
+            </div>
+            <div class="footer-contact">
+                <p><a href="#">Privacy Policy</a></p>
+                <p><a href="mailto:cocoalwaysfresh@gmail.com">Contact</a></p>
+            </div>
+            <div class="social-media-footer">
+                <a href="https://www.facebook.com/cocosummermall"><img src="images/facebook-footer.png" alt="Facebook Icon"></a>
+                <a href="https://www.instagram.com/coco.kuching"><img src="images/instagram-footer.png" alt="Instagram Icon"></a>
+            </div>
+        </div>
+        <div class="copyright-mobile">
+            <p>© 2021 Coco Always Fresh. All rights reserved.</p>
+        </div>
+        </div>
+    </footer>
+
+</div>
+
+    <script src="scripts/script.js"></script>
+<body>
 </body>
 </html>
